fix: filter dropdown alignment in org-chart done (#156)
fix: filter dropdown alignment in org-chart done

--- a/src/scss/filejet-scss/org-chart/_org-chart.scss
+++ b/src/scss/filejet-scss/org-chart/_org-chart.scss
@@ -154,7 +154,7 @@
                     gap: 10px !important;
                 }
                 @media (min-width:1201px) and (max-width:1393px) {
-                    gap: 13px !important;
+                    gap: 11px !important;
                 }
                 & div{
                     @extend .bg-white,.shadow,.rounded-2,.fs-6,.py-3,.px-3,.align-items-center,.d-flex,.justify-content-between;
